test-suite/tests/roundtrip/invalid/semantic/typecheck/apart/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/apart/01/input.essence:2:21:
  |
2 | such that b = apart(1, 3)
  |                     ^
Type error:
	Expected: set of ?
	Got: int

tests/roundtrip/invalid/semantic/typecheck/apart/01/input.essence:2:24:
  |
2 | such that b = apart(1, 3)
  |                        ^
Type error:
	Expected: partition from ?
	Got: int

